stage 6:after Hagana